// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalConfirmation should match confirm mode with description 1`] = `
<div>
  <div
    class="p-6"
  >
    <h2
      class="h4 text-neutral-400 mb-2 max-w-sm"
    >
      my title
    </h2>
    <div
      class="text-neutral-350 text-sm mb-6"
    >
      my description
      <span
        class="link inline cursor-pointer text-sky-500 text-sm ml-1 truncate max-w-[250px]"
        data-state="closed"
        data-testid="copy-cta"
      >
        staging
         
        <span
          class="icon-solid-copy shrink-0 "
          role="img"
        />
      </span>
    </div>
    <form>
      <div
        class="mb-5 "
        data-testid="input-small-wrapper"
      >
        <div
          class="input input--small flex-grow   "
          data-testid="input"
        >
          <label
            class="hidden"
          />
          <input
            class="absolute text-sm top-0 left-0 h-full w-full text-neutral-400 placeholder:text-neutral-350 rounded px-2 "
            data-testid="input-value"
            name="name"
            placeholder="Enter the current name"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex gap-3 justify-end"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 focus-visible:text-neutral-400 active:bg-neutral-150 active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`ModalConfirmation should match delete mode with description 1`] = `
<div>
  <div
    class="p-6"
  >
    <h2
      class="h4 text-neutral-400 mb-2 max-w-sm"
    >
      my title
    </h2>
    <div
      class="text-neutral-350 text-sm mb-6"
    >
      my description
    </div>
    <form>
      <div
        class="mb-5 "
        data-testid="input-small-wrapper"
      >
        <div
          class="input input--small flex-grow   "
          data-testid="input"
        >
          <label
            class="hidden"
          />
          <input
            class="absolute text-sm top-0 left-0 h-full w-full text-neutral-400 placeholder:text-neutral-350 rounded px-2 "
            data-testid="input-value"
            name="name"
            placeholder="Enter "delete""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex gap-3 justify-end"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 focus-visible:text-neutral-400 active:bg-neutral-150 active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-red-500 active:bg-red-600 hover:bg-red-400 text-white disabled:text-red-300 disabled:bg-red-100"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`ModalConfirmation should match delete mode without description 1`] = `
<div>
  <div
    class="p-6"
  >
    <h2
      class="h4 text-neutral-400 mb-2 max-w-sm"
    >
      my title
    </h2>
    <div
      class="text-neutral-350 text-sm mb-6"
    >
      To confirm the deletion of 
      <strong>
        staging
      </strong>
      , please type "delete"
    </div>
    <form>
      <div
        class="mb-5 "
        data-testid="input-small-wrapper"
      >
        <div
          class="input input--small flex-grow   "
          data-testid="input"
        >
          <label
            class="hidden"
          />
          <input
            class="absolute text-sm top-0 left-0 h-full w-full text-neutral-400 placeholder:text-neutral-350 rounded px-2 "
            data-testid="input-value"
            name="name"
            placeholder="Enter "delete""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex gap-3 justify-end"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 focus-visible:text-neutral-400 active:bg-neutral-150 active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-red-500 active:bg-red-600 hover:bg-red-400 text-white disabled:text-red-300 disabled:bg-red-100"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </form>
  </div>
</div>
`;
